tests/compile-fail/fail6.stderr
error[E0759]: `s` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/fail6.rs:12:20
   |
11 | fn f(s: &str) {
   |         ---- this data with an anonymous lifetime `'_`...
12 |     let u = U::new(s);
   |                    ^ ...is used here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/fail6.rs:12:13
   |
12 |     let u = U::new(s);
   |             ^^^^^^
